# TskbSync

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/ice/tskbsync/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ice/tskbsync/: MainActivity.kt  SettingsManager.kt  SettingsScreen.kt  ShortcutConfig.kt  TaskbarScreen.kt  TaskbarViewModel.kt  TaskbarWidgetConfigActivity.kt  TaskbarWidgetProvider.kt  WindowInfo.kt
app/src/main/java/com/ice/tskbsync/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_widget_chevron_left_disabled.xml  ic_widget_chevron_right.xml  ic_widget_chevron_right_disabled.xml  taskbar_widget_background.xml  taskbar_widget_item_active_background.xml  taskbar_widget_item_background.xml
app/src/main/res/layout/: taskbar_widget.xml  taskbar_widget_window_item.xml  taskbar_widget_window_item_compact.xml  taskbar_widget_window_item_icon.xml  taskbar_widget_window_item_large.xml  taskbar_widget_window_item_large_icon.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/xml/: taskbar_widget_info.xml
app/src/test/java/com/ice/tskbsync/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
pc_backend/: README.md  config.py  ffmpeg_path.example.txt  main.py  start_tray.bat  tray.pyw
pc_backend/native_streamer/: CMakeLists.txt  README.md
pc_backend/native_streamer/src/: main.cpp
